--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name:  Run Tests on PR
+name: Run Tests on PR
 
 on:
   push:
@@ -8,11 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 23
       uses: actions/setup-java@v4
       with:
@@ -20,8 +20,17 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Run tests
-      run: mvn test
-        
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Run tests
+      run: mvn test
+
+    - name: Generate JaCoCo report
+      run: mvn jacoco:report
+
+    - name: Upload JaCoCo report as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: jacoco-report
+        path: target/site/jacoco  # Вказати шлях до звіту JaCoCo
